# event-formation-unit

src/common/: CMakeLists.txt  Polygons.cpp  Polygons.h
src/common/readout/ess/: Parser.h
src/common/test/: CMakeLists.txt  PolygonsTest.cpp
src/efu/: MainProg.cpp
src/modules/: CMakeLists.txt
src/modules/bifrost/configs/: bifrostllbcalib.json
src/modules/bifrost/geometry/: BifrostGeometry.cpp
src/modules/bragg/: CMakeLists.txt  main.cpp
src/modules/bragg/configs/: bragg.json
src/modules/bragg/generators/: CMakeLists.txt  ReadoutGenerator.cpp  ReadoutGenerator.h  udpgen.cpp
src/modules/bragg/geometry/: BraggGeometry.cpp
src/modules/bragg/test/: BraggGeometryTest.cpp  CMakeLists.txt
src/modules/caen/: CMakeLists.txt  CaenInstrument.cpp  CaenInstrument.h
src/modules/caen/geometry/: CDCalibration.cpp  CDCalibration.h
src/modules/caen0d/: CMakeLists.txt  main.cpp
src/modules/caen0d/generators/: CMakeLists.txt  ReadoutGenerator.cpp  udpgen.cpp
src/modules/caen0d/geometry/: CAEN0DGeometry.cpp  CAEN0DGeometry.h
src/modules/caen0d/test/: CAEN0DGeometryTest.cpp  CMakeLists.txt
src/modules/cspec/: main.cpp
src/modules/cspec/test/: CMakeLists.txt  CspecGeometryTest.cpp
